Closed Bug 1657551 Opened 4 years ago Closed 1 year ago

Intermittent Assertion failure: ((bool)(__builtin_expect(!!(!NS_FAILED_impl(rv)), 1))), at /builds/worker/checkouts/gecko/storage/mozStorageConnection.cpp:1461

Categories

(Toolkit :: Storage, defect, P5)

defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox108 --- wontfix
firefox109 --- wontfix
firefox110 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jstutte)

References

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

Filed by: ncsoregi [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=312222599&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/a1dtmgR1SoOvsBWo0ZlyhA/runs/0/artifacts/public/logs/live_backing.log


[task 2020-08-06T05:21:01.746Z] 05:21:01 INFO - GECKO(4664) | Assertion failure: ((bool)(__builtin_expect(!!(!NS_FAILED_impl(rv)), 1))), at /builds/worker/checkouts/gecko/storage/mozStorageConnection.cpp:1461
[task 2020-08-06T05:21:01.761Z] 05:21:01 INFO - GECKO(4664) | [(null) 5016: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 093B3800 == 3 [pid = 5016] [id = {1313aa19-32bc-4898-a6a4-4857d1120ca6}] [url = chrome://devtools/content/framework/browser-toolbox/window.html]
[task 2020-08-06T05:21:01.761Z] 05:21:01 INFO - GECKO(4664) | [(null) 5016: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 0FCE2C00 == 2 [pid = 5016] [id = {20349434-8b56-4151-9f7c-d671aa410aaa}] [url = chrome://devtools/content/inspector/index.xhtml]
[task 2020-08-06T05:21:01.761Z] 05:21:01 INFO - GECKO(4664) | [(null) 5016: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 153C8800 == 1 [pid = 5016] [id = {20606b86-ad5b-4fd0-a46c-91a3e8699d1c}] [url = chrome://devtools/content/inspector/markup/markup.xhtml]
[task 2020-08-06T05:21:01.761Z] 05:21:01 INFO - GECKO(4664) | [(null) 5016: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 0EC3A000 == 0 [pid = 5016] [id = {6c053b0d-f4f3-4020-bf9d-37a578a3f671}] [url = about:devtools-toolbox]
[task 2020-08-06T05:21:01.868Z] 05:21:01 INFO - Initializing stack-fixing for the first stack frame, this may take a while...
[task 2020-08-06T05:21:01.915Z] 05:21:01 INFO - fix-stacks error: failed to run Z:\task_1596688865\build\tests\bin\fileid.exe for Z:\task_1596688865\build\application\firefox\xul.dll
[task 2020-08-06T05:21:01.918Z] 05:21:01 INFO - GECKO(4664) | #01: DumpCompleteHeap [Z:\task_1596688865\build\application\firefox\xul.dll + 0xf75d54]
[task 2020-08-06T05:21:01.918Z] 05:21:01 INFO - GECKO(4664) | #02: Ordinal0 [Z:\task_1596688865\build\application\firefox\xul.dll + 0x16b78f]
[task 2020-08-06T05:21:01.918Z] 05:21:01 INFO - GECKO(4664) | #03: Ordinal0 [Z:\task_1596688865\build\application\firefox\xul.dll + 0x170c38]
[task 2020-08-06T05:21:01.919Z] 05:21:01 INFO - GECKO(4664) | #04: Ordinal0 [Z:\task_1596688865\build\application\firefox\xul.dll + 0x8f745e]
[task 2020-08-06T05:21:01.919Z] 05:21:01 INFO - GECKO(4664) | #05: Ordinal0 [Z:\task_1596688865\build\application\firefox\xul.dll + 0x8a2d81]
[task 2020-08-06T05:21:01.920Z] 05:21:01 INFO - GECKO(4664) | #06: Ordinal0 [Z:\task_1596688865\build\application\firefox\xul.dll + 0x8a2c93]
[task 2020-08-06T05:21:01.920Z] 05:21:01 INFO - GECKO(4664) | #07: Ordinal0 [Z:\task_1596688865\build\application\firefox\xul.dll + 0x8a2b57]
[task 2020-08-06T05:21:01.920Z] 05:21:01 INFO - GECKO(4664) | #08: Ordinal0 [Z:\task_1596688865\build\application\firefox\xul.dll + 0x168001]
[task 2020-08-06T05:21:02.235Z] 05:21:02 INFO - GECKO(4664) | #09: _PR_NativeRunThread(void*) [nsprpub/pr/src/threads/combined/pruthr.c:399]
[task 2020-08-06T05:21:02.235Z] 05:21:02 INFO - GECKO(4664) | #10: pr_root(void*) [nsprpub/pr/src/md/windows/w95thred.c:139]
[task 2020-08-06T05:21:02.235Z] 05:21:02 INFO - fix-stacks error: failed to read breakpad symbols dir Z:\task_1596688865\build\symbols\ucrtbase.DLL for Z:\task_1596688865\build\application\firefox\ucrtbase.DLL
[task 2020-08-06T05:21:02.235Z] 05:21:02 INFO - fix-stacks note: this is expected and harmless for system libraries on debug automation runs
[task 2020-08-06T05:21:02.236Z] 05:21:02 INFO - GECKO(4664) | #11: o____lc_collate_cp_func [Z:\task_1596688865\build\application\firefox\ucrtbase.DLL + 0x3e16f]
[task 2020-08-06T05:21:02.236Z] 05:21:02 INFO - fix-stacks error: failed to read breakpad symbols dir Z:\task_1596688865\build\symbols\kernel32.pdb for C:\windows\system32\kernel32.dll
[task 2020-08-06T05:21:02.236Z] 05:21:02 INFO - fix-stacks note: this is expected and harmless for system libraries on debug automation runs
[task 2020-08-06T05:21:02.236Z] 05:21:02 INFO - GECKO(4664) | #12: BaseThreadInitThunk [C:\windows\system32\kernel32.dll + 0x4ef3c]
[task 2020-08-06T05:21:02.311Z] 05:21:02 INFO - GECKO(4664) | #13: DllBlocklist_Initialize [Z:\task_1596688865\build\application\firefox\mozglue.dll + 0x20257]
[task 2020-08-06T05:21:02.311Z] 05:21:02 INFO - fix-stacks error: failed to read breakpad symbols dir Z:\task_1596688865\build\symbols\ntdll.pdb for C:\windows\SYSTEM32\ntdll.dll
[task 2020-08-06T05:21:02.311Z] 05:21:02 INFO - fix-stacks note: this is expected and harmless for system libraries on debug automation runs
[task 2020-08-06T05:21:02.311Z] 05:21:02 INFO - GECKO(4664) | #14: RtlInitializeExceptionChain [C:\windows\SYSTEM32\ntdll.dll + 0x63618]
[task 2020-08-06T05:21:02.312Z] 05:21:02 INFO - GECKO(4664) | #15: RtlInitializeExceptionChain [C:\windows\SYSTEM32\ntdll.dll + 0x635eb]
[task 2020-08-06T05:21:02.312Z] 05:21:02 INFO - TEST-INFO | started process screenshot
[task 2020-08-06T05:21:02.373Z] 05:21:02 INFO - TEST-INFO | screenshot: exit 0
[task 2020-08-06T05:21:02.374Z] 05:21:02 INFO - Buffered messages logged at 05:20:51
[task 2020-08-06T05:21:02.374Z] 05:21:02 INFO - Entering test bound
[task 2020-08-06T05:21:02.375Z] 05:21:02 INFO - TEST-PASS | devtools/client/framework/browser-toolbox/test/browser_browser_toolbox_fission_inspector.js | Browser toolbox started

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Status: REOPENED → RESOLVED
Closed: 4 years ago3 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Severity: normal → S3
Blocks: 1768581
Assignee: nobody → jstutte
Attachment #9305274 - Attachment description: WIP: Bug 1657551 - Part15: Have a static ConcurrentStatementsHolder::Create function that handles errors returned from mozIStorageConnection::AsyncClone and transform some MOZ_ASSERT into NS_SUCCEEDED. → Bug 1657551 - Part15: Have a static ConcurrentStatementsHolder::Create function that handles errors returned from mozIStorageConnection::AsyncClone and transform some MOZ_ASSERT into NS_ENSURE_SUCCESS. r?mak
Attachment #9305274 - Attachment description: Bug 1657551 - Part15: Have a static ConcurrentStatementsHolder::Create function that handles errors returned from mozIStorageConnection::AsyncClone and transform some MOZ_ASSERT into NS_ENSURE_SUCCESS. r?mak → Bug 1657551 - Part 6: Have a static ConcurrentStatementsHolder::Create function that handles errors returned from mozIStorageConnection::AsyncClone and transform some MOZ_ASSERT into NS_ENSURE_SUCCESS. r?mak
Pushed by jstutte@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/954cba095750
Part 6: Have a static ConcurrentStatementsHolder::Create function that handles errors returned from mozIStorageConnection::AsyncClone and transform some MOZ_ASSERT into NS_ENSURE_SUCCESS. r=mak
Status: REOPENED → RESOLVED
Closed: 3 years ago1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch

The patch landed in nightly and beta is affected.
:jstutte, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox109 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jstutte)
Flags: needinfo?(jstutte)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: