Bug 1657551 - Part 6: Have a static ConcurrentStatementsHolder::Create function that handles errors returned from mozIStorageConnection::AsyncClone and transform some MOZ_ASSERT into NS_ENSURE_SUCCESS. r=mak

Depends on D163050

Differential Revision: https://phabricator.services.mozilla.com/D163083